--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <!--Container for React rendering-->
-        <div id="container"></div>
+        <div id="routes"></div>
         <!--Bundled file-->
         <script src="bundle.js"></script>
     </body>
